--- a/ShoomShoom_Unity/Packages/manifest.json
+++ b/ShoomShoom_Unity/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.psdimporter": "6.0.7",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "7.0.6",
     "com.unity.cinemachine": "2.8.9",
